ncc/testsuite/positive/bug-1209.n
using System;

module Program
{
  Main() : void
  {
    def f(y)
    {
      y :> int
    }
    
    Console.WriteLine(f(Convert.ToDecimal(3)));
  }
}

/*
BEGIN-OUTPUT
3
END-OUTPUT
*/  