ncc/testsuite/negative/block2.n
using Nemerle.Block;
module M {
  bar3 () : int
  {
    brk : { 
      def qfoo () {
        brk (42) // E: non local goto
      }
      qfoo(); // W: ignored
      qfoo();
    }
  }

  Main () : void
  {
  }
  
}
